tests/diagnostics/multiline.golden
multiline.cur:2:11: error: test error
  |
  |   let x = 1 +
  |           ^
